--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.12.2",
+    "marked": "^16.3.0",
     "node-telegram-bot-api": "^0.66.0"
   }
 }
