--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
     "marked": "^16.3.0",
     "node-telegram-bot-api": "^0.66.0",
     "turndown": "^7.2.1"
-  }
+  },
+  "devDependencies": {}
 }
