--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
-node_modules/
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Dependencies
+node_modules/
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
