--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.12.2",
+    "dotenv": "^17.2.2",
     "marked": "^16.3.0",
     "node-telegram-bot-api": "^0.66.0",
     "turndown": "^7.2.1"
-  },
-  "devDependencies": {}
+  }
 }
